--- a/formstyles.css
+++ b/formstyles.css
@@ -18,6 +18,20 @@ html {
     box-sizing: inherit;
 }
 
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
+
 * {
     border: none;
 }
@@ -178,7 +192,7 @@ input[type="submit"]:hover {
     input[type="checkbox"] + label {
         display: inline;
         margin-right: 3%;
-    }
+    }    
     fieldset h3 {
         margin: 40px 0 25px 0;
     }
